--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,15 +1,19 @@
 <div class="form-group">
-    <%= form_with model: @todo,local: true do|f| %>
+    <%= form_with model: @todo, local: true do |f| %>
         <div>
             <%= f.label :description, "Description" %>
             <%= f.text_field :description, class: 'form-control' %>
         </div>
         <div>
             <%= f.label :completed, "completed" %>
-            <%= f.check_box :Completed ,class: 'form-check'%>
+            <%if @todo.completed.present? &&  @todo.completed %>
+                <%= f.check_box :Completed ,class: 'form-check', checked:'checked'%>
+            <%else %>
+                <%= f.check_box :Completed ,class: 'form-check'%>
+            <%end  %>
         </div>
         <div>
-            <%= f.submit "Crear", disable_with: 'Submiting...' %>
+            <%= f.submit "Enviar", disable_with: 'Submiting...' %>
         </div>
 
     <% end %>
