Desarrollo Parte III: Nuevo landing y barra de navegación

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+    <%= render 'partial/navbar' %>
+
     <% if notice.present? %>
       <div class="row">
         <div class="container">
