--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,12 +1,15 @@
-<div class="form-group">
-    <%= form_with model: @todo, local: true do |f| %>
-        <div>
-            <%= f.label :description, "Description" %>
-            <%= f.text_field :description, class: 'form-control' %>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="form">
+            <%= form_with model: @todo, local: true do |f| %>
+                <div class="form-group">
+                    <%= f.label :description, class: 'mb-2' %>
+                    <%= f.text_field :description, class: 'form-control col-lg-12' %>
+                </div>  
+                <%= f.submit "Enviar", class: 'btn btn-outline-success mb   ', disable_with: 'Submiting...' %>
+                <%= link_to 'Volver', todos_path, class: 'btn btn-outline-warning' %>
+            <% end %>
+            
         </div>
-        
-        <div>
-            <%= f.submit "Enviar", disable_with: 'Submiting...' %>
-        </div>
-    <% end %>
+    </div>
 </div>
