--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,17 +1,22 @@
 <div class="row">
-    <h1>To do List</h1>
-    <%= link_to 'Nuevo To Do', todos_new_path, class: 'btn btn-success' %>
-</div>
+    <div class="col-lg-12">
+        <h1>To do List</h1>
+        <%= link_to '<i class="fas fa-plus"></i> Crear To Do'.html_safe, todos_new_path, class: 'btn btn-success' %>
+        <hr>
+    </div>
+</div>  
 <div class="row">
-    <ul class="list-group">
-    <% @todos.each do |todo| %>
-        <li class="list-group-item">
-            <%= todo.description %>
-            <%= link_to 'Complete', complete_todo_path(todo.id), class: 'btn btn-success', data: { method: :patch}%>
-            <%= link_to 'Detalles', todo_path(todo.id), class: 'btn btn-info' %> 
-            <%= link_to 'Editar', edit_todo_path(todo.id), class: 'btn btn-warning'  %>
-            <%= link_to 'Eliminar', destroy_todo_path(todo.id), class: 'btn btn-danger', data: {confirm:'Desea eliminar este registro?', method: :delete} %>
-        </li>
-    <% end %>
-    </ul>
+    <div class="col-lg-12 col-xl-12">
+        <ul class="list-group">
+        <% @todos.each do |todo| %>
+            <li class="list-group-item">
+                <label class="col-md-8 col-8 col-sm-12 col-lg-10 col-xl-10"><%= todo.description %></label>
+                <%= link_to '<i class="fas fa-check"></i>'.html_safe, complete_todo_path(todo.id), class: 'btn btn-success btn-sm', data: { method: :patch}, title: 'Completado' %>
+                <%= link_to '<i class="fas fa-info-circle"></i>'.html_safe, todo_path(todo.id), class: 'btn btn-info btn-sm', title: 'Detalle' %> 
+                <%= link_to '<i class="fas fa-pencil-alt"></i>'.html_safe, edit_todo_path(todo.id), class: 'btn btn-warning btn-sm', title: 'Editar'  %>
+                <%= link_to '<i class="far fa-trash-alt"></i> '.html_safe, destroy_todo_path(todo.id), class: 'btn btn-danger btn-sm', data: {confirm:'Desea eliminar este registro?', method: :delete }, title: 'Eliminar' %>
+            </li>
+        <% end %>
+        </ul>
+    </div>
 </div>
